<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="salesassistant.com.salesassistant.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clients_manage"
        android:id="@+id/btnClients"
        android:layout_marginBottom="47dp"
        android:layout_above="@+id/btnProducts"
        android:layout_alignStart="@+id/btnProducts"
        android:layout_alignEnd="@+id/btnProducts"
        android:onClick="onBtnClientsClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/products_manage"
        android:id="@+id/btnProducts"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="onBtnProductsClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_sales"
        android:id="@+id/btnSales"
        android:layout_below="@+id/btnProducts"
        android:layout_marginTop="40dp"
        android:layout_alignEnd="@+id/btnProducts"
        android:layout_alignStart="@+id/btnProducts"
        android:nestedScrollingEnabled="false"
        android:onClick="onBtnSalesClick" />
</RelativeLayout>
